tahini/tests/arrays2.tah
fun testList() {
  return [1, 2, 3, 4, 5];
}

print testList()[8];

// RuntimeError: Index out of bounds.
// [at line 5 in arrays2.tah]
